add report and update admin routes
